--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,8 +1,11 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    form_themes: ['bootstrap_5_layout.html.twig']
 
 when@test:
     twig:
         strict_variables: true
 #twig:
 #    form_themes: ['bootstrap_4_layout.html.twig']
+# config/packages/twig.yaml
+
